HTML fixes, CSS nowrap

--- a/data/global.css
+++ b/data/global.css
@@ -280,3 +280,8 @@ div.ts3_viewer {
     text-align: right;
     font-family: monospace; 
 }
+
+/* This prevents the github lables from wrapping */
+.unc_datatables span{
+    white-space: nowrap;
+}
